--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,13 +3,23 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Easy lunch</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
+  <h3>Menu</h3>
+  <ion-list>
+    <button
+    ion-item
+    *ngFor="let menuGroup of menu"
+    [navPush]="dishesPage"
+    [navParams]="menuGroup">
+    <ion-icon [name]="menuGroup.icon" item-left></ion-icon>
+    <h2>{{ menuGroup.category | uppercase }}</h2>
+    <p>{{ menuGroup.dishes.length }} Dishes</p>
+  </button>
+</ion-list>
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
